# vib-plugins

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
boot-shell/: Cargo.toml
boot-shell/src/: lib.rs
ostree-pkg/: Cargo.toml
ostree-pkg/src/: lib.rs
