[package]
name = "ostree-pkg"
version = "0.0.1"
edition = "2021"

[lib]
name = "ostreepkg"
crate-type = ["rlib", "cdylib"]

[dependencies]
regex = "1.11.1"
serde.workspace = true
serde_json.workspace = true
uuid = { version = "1.14.0", features = ["v4"] }
vib-api.workspace = true


[dev-dependencies]
tempfile.workspace = true
